--- a/index.Rmd
+++ b/index.Rmd
@@ -20,7 +20,7 @@ output:
 layout: true
   
 <div class="my-footer"><span>
-Seminários em Bioinformática 27/06/2022 - <a href="https://github.com/ElizaAlfaro">Elizabeth Alfaro-Espinoza</a>
+Seminários em Bioinformática <a href="https://seminarios-fluxprt.netlify.app/">27/06/2022</a> - <a href="https://github.com/ElizaAlfaro">Elizabeth Alfaro-Espinoza</a>
 </span></div>
 
 
@@ -180,16 +180,6 @@ knitr::include_graphics("img/result/fluxoAtivbr.svg")
 --- guest2021: gu3st
 ```
 
----
-class: middle
-## FluxPRT
-
-```{r echo=FALSE}
-xaringanExtra::embed_xaringan(
-  url = "http://www.flux2.luar.dcc.ufmg.br",
-  ratio = "16:7"
-)
-```
 
 ---
 class: middle
@@ -268,8 +258,8 @@ class: middle
 
 # Relatório
 
-```{r}
-xaringanExtra::embed_xaringan("img/result/relatorio.pdf", max_width = "80%")
+```{r, out.width="90%", fig.align='center', fig.cap="Relatório da atividade de Obtenção. Fonte: Autoral."}
+knitr::include_graphics("img/result/relatorio.png")
 ```
 
 ---
@@ -338,10 +328,8 @@ knitr::include_graphics("img/thanks.png")
 
 
 .pull-right[
-*Feito com `r emo::ji("blue_heart")` usando [Xaringan](https://github.com/yihui/xaringan) e [Kunoichi](https://github.com/emitanaka/ninja-theme).*
+#####Feito com `r emo::ji("blue_heart")` usando [Xaringan](https://github.com/yihui/xaringan) e [XaringanExtra](https://github.com/gadenbuie/xaringanExtra).
 ]
-
-xaringan::inf_mr()
 
 ---
 class: inverse, middle
